katalog/tests/istio-operator/egress/httpbin-externalName-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-httpbin
spec:
  host: my-httpbin.egress-tests.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
